--- a/cookbook/meal-prep/cards-and-buttons/css/page3.css
+++ b/cookbook/meal-prep/cards-and-buttons/css/page3.css
@@ -80,7 +80,7 @@ h3 {
 
     However, at the moment, our card content doesn't 
     actually look much like a card...and our button
-    doesn't really behave much like a buttton...
+    doesn't really behave much like a button...
     
     So let's see how we can make  our fake button a 
     bit more interactive, and then we'll see how
