--- a/cookbook/meal-prep/media-queries/css/page1.css
+++ b/cookbook/meal-prep/media-queries/css/page1.css
@@ -4,11 +4,6 @@
 body {
     margin: 0px;
     font-family: sans-serif;
-}
-
-#header, #main, #footer {
-    width: 100vw;
-    height: 150px;
     background-color: teal;
 }
 
@@ -18,33 +13,60 @@ body {
     to conditionally apply, edit, and/or remove styles
     in our html at different screen sizes.
 
-    To create a media query, you first must add
-    "@media" followed by "screen" which is a type of media.
-    Then, you'll add an "and" and also target a media feature.
+    In other words, we can change the way the page
+    looks or behaves depending on the screen size.
+
+    There are three main parts to media queries:
+    - the @media keyword
+    - the media type
+    - one or more media features
+
+    The @media keyword is what starts the media query;
+    it is required whenever you create a media query.
+
+    Next, you include the media type.  In our case,
+    it is always going to be the type of 'screen',
+    but another media type is 'print'.
+
+    Lastly, we'll add the media features we want to 
+    target in the media query.
     
     There are many different media features but in our case,
-    we'll be targetting the max-width feature which is one
-    of the two we often use to make our webapges responsive 
-    at different widths.
+    the two main ones we'll be using are max-width and 
+    min-width; these two media features allow us to restyle
+    our web pages at different widths.
 
-    We'll want to write out a set of parenthesis and write
-    "max-width: 768px;" in between them. We'll follow this
-    up with a declaration block which is where we'll target
+    To include a media feature in a media query, we'll 
+    want to write out a set of parenthesis and inside write
+    the particular media feature we want to include.
+    
+    In our case, we'll write "max-width: 725px;". 
+    
+    After including all of the media features we want to
+    target, we'll follow the parentheses with a declaration 
+    block, similar to a CSS Rule, which is where we'll target
     our selectors to add or change some styles based off of
     the media feature we added which serves as a condition.
 
     Now, we have our first media query which is basically
     just one big css rule that will hold other css rules
     inside of it. However, the rules inside of it will
-    only be applied if the conditions of the media feature
-    are met. Meaning, styles added here won't show up
-    past a width of 768px.
+    only be applied if the conditions of the media feature(s)
+    are met. 
+    
+    In our case, this means that the CSS Rules added inside
+    the media query will only be applied if the screen width 
+    is 725px or less.
 
-    We also refer to the max and min width media features
-    as breakpoints often.
+    That boundary (the 725px in our case) between which
+    media query styles are switched are often refered to
+    as "breakpoints".
+
+    In our case, we might refer to this as the 
+    725px breakpoint.
 
     Now, let's get a style in here.
 */
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 725px) {
 
 }
