--- a/cookbook/meal-prep/media-queries/css/page3.css
+++ b/cookbook/meal-prep/media-queries/css/page3.css
@@ -4,50 +4,61 @@
 body {
     margin: 0px;
     font-family: sans-serif;
-}
-
-#header, #main, #footer {
-    width: 100vw;
-    height: 150px;
     background-color: teal;
 }
 
-@media screen and (max-width: 768px) {
-    #main, #footer {
+@media screen and (max-width: 725px) {
+    body {
         background-color: orange;
     }
 }
 
 /*
     Let's create another media query. This time we'll
-    set it's media feature to be a min-length of 300px.
-
-    min-length is another common media feature used to
-    make our webpages responsive. Unlike max-length, this
-    sets a condition that will only apply styles if the
-    minimum width is met.
+    set its media feature to be a max-width of 480px.
 */
-@media screen and (min-width: 300px) {
+@media screen and (max-width: 480px) {
     /*
-        Now, let's target our #footer and give it a
+        Now, let's target our body and give it a
         background-color of purple.
 
-        Now, you may see the purple show up automatically.
-        This is because our screen, in this case, the preview,
-        is at or larger that 300px, which is the condition
-        we set for this style to be applied.
+        If you shrink your screen width really small,
+        (less than 480px), the background should turn
+        purple.
 
         You'll also notice that the styles from our previous
-        media query aren't being applied to our #footer. Can
+        media query aren't being applied to our body. Can
         anyone remember why?
 
-        It's because CSS is applied from top to down, which means
-        our latest (and most specific) rules will get applied last.
-        (I think that needs rephrasing.)
+        It's because CSS is applied from the top of our CSS
+        file to the bottom, CASCADING down our HTML like a
+        waterfall.
 
-        Now, let's go over one more way we can use media queries.
+        This means that first, the teal background color is 
+        applied to the body (because it's first in the 
+        stylesheet), but then if the screen width
+        meets the conditions of a media query later in the 
+        stylesheet, then that background color will be 
+        overwritten by the color in the media query.
+
+        Whenever an element has conflicting CSS Property
+        values assigned to it (like the body in our case), 
+        the browser will first evaluate which CSS Rules are 
+        more specific, and use those Rules to assign the values.
+
+        If two rules have the same level of specificity,
+        then whichever CSS rule comes last in the stylesheet
+        will be the one that gets its value applied.
+        
+        This is what happens in our case: all three CSS rules
+        use the body selector to target the body element,
+        meaning they have the same level of specificity.
+        
+        As a result, because the 480px media query's body
+        CSS Rule comes last, it's the color that is applied
+        (assuming the screen width matches the media query).
     */
-    #footer {
+    body {
         background-color: purple;
     }
 }
