--- a/cookbook/meal-prep/media-queries/css/page7.css
+++ b/cookbook/meal-prep/media-queries/css/page7.css
@@ -4,6 +4,7 @@
 body {
     margin: 0px;
     font-family: sans-serif;
+    background-color: teal;
 }
 
 #header, #footer {
@@ -86,3 +87,16 @@ body {
 .promotion .content {
     flex: 1;
 }
+
+@media screen and (max-width: 725px) and (min-width: 481px) {
+    body {
+        background-color: orange;
+    }
+}
+
+@media screen and (max-width: 480px) {
+    body {
+        background-color: purple;
+    }
+}
+
