--- a/cookbook/meal-prep/media-queries/css/page9.css
+++ b/cookbook/meal-prep/media-queries/css/page9.css
@@ -4,6 +4,7 @@
 body {
     margin: 0px;
     font-family: sans-serif;
+    background-color: teal;
 }
 
 #header, #footer {
@@ -144,3 +145,15 @@ body {
     Now that we got some content on the page, let's start
     making that content responsive.
 */
+
+@media screen and (max-width: 725px) and (min-width: 481px) {
+    body {
+        background-color: orange;
+    }
+}
+
+@media screen and (max-width: 480px) {
+    body {
+        background-color: purple;
+    }
+}
