--- a/cookbook/meal-prep/media-queries/css/page2.css
+++ b/cookbook/meal-prep/media-queries/css/page2.css
@@ -4,36 +4,33 @@
 body {
     margin: 0px;
     font-family: sans-serif;
-}
-
-#header, #main, #footer {
-    width: 100vw;
-    height: 150px;
     background-color: teal;
 }
 
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 725px) {
     /*
-        Let's target our #main and #footer and give
-        them a background-color of orange. We'll want
+        Let's target our body and give
+        it a background-color of orange. We'll want
         to make sure that when we write this CSS rule,
-        we write it inbetween the curly braces of our
+        we write it in between the curly braces of our
         recently added media query.
+
+        Also, our indentation rules come back into play
+        here: CSS Rules added inside of media queries
+        should be indented one level to the right.
 
         Now, grow and shrink your preview to see
         how our background color changes on depending
-        on if our screen's width meet's the condition
+        on if our screen's width meets the condition
         we applied.
 
-        As long as our screen is at a width of 768px and
+        As long as our screen is at a width of 725px and
         below, our #main and #footer background will be
-        orange but whenever it's 769px and above, our
-        #main and #footer will be teal based on the
+        orange but whenever it's 726px and above, our
+        body element will be teal based on the
         style we applied to them outside of the media query.
-
-        Now, let's try another approach.
     */
-    #main, #footer {
+    body {
         background-color: orange;
     }
 }
