--- a/cookbook/meal-prep/media-queries/css/page8.css
+++ b/cookbook/meal-prep/media-queries/css/page8.css
@@ -4,6 +4,7 @@
 body {
     margin: 0px;
     font-family: sans-serif;
+    background-color: teal;
 }
 
 #header, #footer {
@@ -155,3 +156,15 @@ body {
 /*
     Now let's move on to designing our footer.
 */
+
+@media screen and (max-width: 725px) and (min-width: 481px) {
+    body {
+        background-color: orange;
+    }
+}
+
+@media screen and (max-width: 480px) {
+    body {
+        background-color: purple;
+    }
+}
