--- a/cookbook/meal-prep/restaurant-home/css/style.css
+++ b/cookbook/meal-prep/restaurant-home/css/style.css
@@ -162,6 +162,11 @@ body {
     margin-bottom: 0px;
 }
 
+h1 {
+    font-size: 60px;
+    text-align: center;
+}
+
 h2 {
     text-align: center;
     font-size: 48px;
@@ -247,6 +252,10 @@ h4 {
     margin: 8px 0px;
 }
 
+.side-by-side .text-container.promo p {
+    font-size: 24px;
+}
+
 .side-by-side .text-container h3 {
     font-size: 36px;
 }
@@ -255,6 +264,46 @@ h4 {
     width: 100%;
     height: 100%;
     object-fit: cover;
+}
+
+/*************************************************************
+    Menu styles
+*************************************************************/
+.side-by-side.menu {
+    gap: 36px;
+}
+
+.side-by-side .menu-container {
+    flex: 1;
+    margin-bottom: 36px;
+}
+
+.side-by-side .menu-container img {
+    width: 100%;
+    height: 270px;
+    object-fit: cover;
+}
+
+.side-by-side .menu-container.special {
+    display: flex;
+    flex-direction: column;
+}
+
+.side-by-side .menu-container.special img {
+    width: 100%;
+    flex: 1;
+    object-fit: cover;
+}
+
+.side-by-side .menu-container div {
+    display: flex;
+    margin: 16px 4px;
+    font-size: 28px;
+}
+
+.side-by-side .menu-container div .dots {
+    border-bottom: 2px dotted black;
+    flex: 1;
 }
 
 
