--- a/archive/scratchpad/v3_projects/superbowl-fe/css/style.css
+++ b/archive/scratchpad/v3_projects/superbowl-fe/css/style.css
@@ -4,15 +4,15 @@
 
 body {
     margin: 0px;
-    background-color: #EEEEEE;
+    background-color: #d05b5b;
     font-family: Verdana, Geneva, Tahoma, sans-serif;
     color: white;
-    text-shadow: 0px 4px 8px #000000AA
+    text-shadow: 0px 4px 8px #000000AA;
 }
 
 #layout {
     background-image: 
-        linear-gradient(#00330033, #00330033),
+        linear-gradient(#00330039, #00330039),
         url("../images/josiah-day-oxgb4fGNmMM-unsplash.jpg");
     background-size: cover;
     max-width: 840px;
@@ -37,7 +37,6 @@ span {
 }
 
 .s.eyebrow span {
-    width: 450px;
     margin-bottom: 16px;
     letter-spacing: 3px;
 }
@@ -116,7 +115,7 @@ img.reverse {
 }
 
 .m.info span {
-    margin-top: 8px
+    margin-top: 8px;
 }
 
 .m.info span:first-child {
@@ -125,14 +124,49 @@ img.reverse {
 
 .s.info span {
     margin-top: 36px;
+    font-weight: bold;
 }
 
 .s.info span:last-child {
     margin-top: 12px;
 }
 
+.buttons span {
+    background-color: firebrick;
+    border: 5px solid #ffc681;
+    padding: 12px;
+    width: 250px;
+    font-weight: bold;
+    text-shadow: none;
+    box-shadow: 0px 4px 8px #000000AA;
+    margin: 24px 12px;
+    cursor: pointer;
+    transition: 
+        transform 0.25s,
+        box-shadow 0.25s;
+}
+
+.buttons span:hover {
+    transform: translateY(-4px);
+    box-shadow: 0px 8px 12px #000000AA;
+}
+
+.buttons span:active {
+    transform: translateY(0px);
+    box-shadow: 0px 0px 0px #000000AA;
+}
+
 @media screen and (max-width: 700px) {
+    #layout {
+        margin: 0px auto;
+    }
     .vs-container {
         flex-direction: column;
+    }
+    .buttons span {
+        width: 100%;
+    }
+    .buttons span:first-child {
+        margin-bottom: 0px;
     }
 }
