--- a/archive/scratchpad/v3_projects/superbowl-mock/css/style.css
+++ b/archive/scratchpad/v3_projects/superbowl-mock/css/style.css
@@ -101,6 +101,13 @@ span {
     margin-top: 16px;
 }
 
+.button span {
+    width: 200px;
+    border: 5px solid #777777;
+    height: 36px;
+    margin: 24px 12px;
+}
+
 @media screen and (max-width: 700px) {
     .vs-container {
         flex-direction: column;
