--- a/cookbook/meal-prep/function-game/css/index-alt.css
+++ b/cookbook/meal-prep/function-game/css/index-alt.css
@@ -1,3 +1,12 @@
+/*
+    This version has alternate background tile URLs, as well as
+    different character sprites.
+
+    (The character sprites are set at the bottom of
+    initialize-adventure.js, which is not included in the 
+    Cookbook.)
+*/
+
 @import url('https://fonts.googleapis.com/css2?family=Permanent+Marker&display=swap');
 
 * {
