fixing/improving basic html drills

--- a/cookbook/meal-prep/basic-html-drills/css/style.css
+++ b/cookbook/meal-prep/basic-html-drills/css/style.css
@@ -1,3 +1,9 @@
+/*
+    Don't worry about the CSS for this one;
+    all of this code is just setting up the 
+    drills so that they look nice.
+*/
+
 * {
     box-sizing: border-box;
 }
